--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <version>1.22.0</version>
         </dependency>
         <dependency>
+	         <groupId>com.googlecode.json-simple</groupId>
+		<artifactId>json-simple</artifactId>
+		<version>1.1</version>
+         </dependency>            
+        <dependency>
             <groupId>com.google.http-client</groupId>
             <artifactId>google-http-client-jackson2</artifactId>
             <version>1.11.0-beta</version>
